--- a/src/frontend/app/globals.css
+++ b/src/frontend/app/globals.css
@@ -31,3 +31,16 @@ body {
         text-wrap: balance;
     }
 }
+
+.spinning {
+    animation: spin 1.5s infinite linear;
+}
+
+@keyframes spin {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
+}
